modify controller test expected responses